# Elemental

./: .gitignore  CONTRIBUTING.md  CONTRIBUTING_CN.md  Cargo.toml  OPEN_QUEST.md  README.md  ROADMAP.md  format  format.bat  renovate.json
.github/: dependabot.yml
.github/workflows/: publish.yml  test.yml
crates/core/: Cargo.toml
crates/core/src/: consts.rs  hash.rs  jar.rs  lib.rs  version.rs
crates/core/src/auth/: authorizer.rs  credential.rs  mod.rs
crates/core/src/auth/authorizers/: microsoft.rs  mod.rs  offline.rs
crates/core/src/bootstrap/: cmdl.rs  java.rs  mod.rs
crates/core/src/error/: unification.rs
crates/core/src/install/: mod.rs
crates/core/src/launcher/: builder.rs  command.rs  mod.rs  model.rs  process.rs  vanilla.rs
crates/core/src/legacystorage/: game.rs  mod.rs  version.rs
crates/core/src/meta/: metadata.rs
crates/core/src/minecraft/: mod.rs  version.rs
crates/core/src/model/: launchenvs.rs  mojang.rs
crates/core/src/models/: launchenvs.rs  mod.rs  mojang.rs
crates/core/src/mojang/: base_url.rs  extensions.rs  mod.rs
crates/core/src/offline/: uuid.rs
crates/core/src/online/: downloader.rs  mod.rs  mojang.rs
crates/core/src/os/: linux.rs  mod.rs
crates/core/src/runtime/: distribution.rs  mod.rs  provider.rs
crates/core/src/runtime/providers/: custom.rs  envjavahome.rs  envpath.rs  mod.rs  pm.rs  registry.rs
crates/core/src/services/: downloader.rs  mod.rs  mojang.rs
crates/core/src/storage/: game.rs  jar.rs  layout.rs  mod.rs  resource.rs  storage.rs  store.rs  validate.rs  version.rs
crates/demo/: Cargo.toml  main.rs
crates/demo/src/: cli.rs  commands.rs  config.rs  diagnostics.rs  lib.rs  main.rs
crates/demo/src/commands/: cleanroom.rs  fabric_like.rs  forge.rs  liteloader.rs  mod.rs  neoforge.rs  quilt.rs  rift.rs  vanilla.rs
crates/discover/: Cargo.toml
crates/discover/src/: lib.rs  main.rs
crates/discover/src/curseforge/: mod.rs  serialize.rs
crates/discover/src/modrinth/: mod.rs
crates/driver/: Cargo.toml
crates/driver/src/: catalog.rs  descriptors.rs  driver.rs  http.rs  inspect.rs  launch.rs  launch_arguments.rs  lib.rs  loader_version.rs  maven.rs  runtime.rs  url.rs
crates/driver/src/drivers/: fabric.rs  forge.rs  mod.rs  neoforge.rs  shared.rs  vanilla.rs
crates/driver/src/drivers/cleanroom/: catalog.rs  config.rs  driver.rs  mod.rs  source.rs
crates/driver/src/drivers/fabric/: catalog.rs  config.rs  driver.rs  mod.rs  prepared.rs  source.rs
crates/driver/src/drivers/fabric/flavors/: babric.rs  common.rs  mod.rs  passthrough.rs
crates/driver/src/drivers/forge/: catalog.rs  config.rs  driver.rs  prepared.rs  processor.rs  source.rs
crates/driver/src/drivers/liteloader/: catalog.rs  config.rs  driver.rs  manifest.rs  maven.rs  mod.rs  prepared.rs  profile.rs  source.rs
crates/driver/src/drivers/neoforge/: catalog.rs  config.rs  driver.rs  mod.rs  prepared.rs  processor.rs  source.rs
crates/driver/src/drivers/quilt/: catalog.rs  config.rs  driver.rs  prepared.rs  source.rs
crates/driver/src/drivers/rift/: catalog.rs  config.rs  driver.rs  prepared.rs  source.rs
crates/driver/src/drivers/vanilla/: catalog.rs  config.rs  driver.rs  mod.rs  prepared.rs  source.rs
crates/driver/src/drivers/version_json/: builder.rs  classpath.rs  extensions.rs  layout.rs  meta.rs  mod.rs  platform.rs  prepared.rs  resource.rs  rules.rs  state.rs  storage.rs  variables.rs
crates/driver/src/families/: mod.rs
crates/driver/src/families/installer/: archive.rs  artifact.rs  driver.rs  family.rs  libraries.rs  mod.rs  processor.rs  profile.rs  source.rs
crates/driver/src/families/version_json/: builder.rs  direct_profiled.rs  driver.rs  extensions.rs  family.rs  layout.rs  mod.rs  prepared.rs  profile.rs  remote.rs  resource.rs  rules.rs  source.rs  state.rs  storage.rs  variables.rs
crates/driver/src/families/version_json/launch/: config.rs  mod.rs
crates/elemental/: Cargo.toml
crates/elemental/src/: lib.rs
crates/facade/: README.md
crates/infra/: Cargo.toml
crates/infra/src/: jar.rs  lib.rs
crates/infra/src/downloader/: anyhost.rs  control.rs  core.rs  mod.rs  plan.rs  report.rs  session.rs  task.rs  tracking.rs  validation.rs
crates/infra/src/downloader/materializer/: hardlink_cached.rs  mod.rs  no_cached.rs
crates/infra/src/downloader/storage/: hardlink_cached.rs  local_fs.rs  mod.rs
crates/launcher/: Cargo.toml
crates/launcher/src/: builder.rs  launcher.rs  lib.rs  request.rs  result.rs  spec.rs
crates/loader/: Cargo.toml
crates/loader/src/: base.rs  fabric.rs  forge.rs  lib.rs  neoforge.rs
crates/meta/: Cargo.toml
crates/meta/src/: lib.rs
crates/modloader/: Cargo.toml
crates/modloader/src/: base.rs  lib.rs
crates/modmarket/: Cargo.toml
crates/object/: Cargo.toml  DESIGN.md  README.md
crates/object/src/: context.rs  facade.rs  instant.rs  lib.rs  pool.rs
crates/schema/: Cargo.toml
crates/schema/src/: lib.rs
crates/schema/src/fabric/: meta.rs  mod.rs
crates/schema/src/forge/: installer_profile.rs  maven_metadata.rs  mod.rs
crates/schema/src/mojang/: mod.rs
crates/schema/src/mojang/launcher/: mod.rs  version_manifest.rs
crates/schema/src/mojang/piston/: asset_index.rs  mod.rs  version_metadata.rs
crates/schema/src/quilt/: meta.rs  mod.rs
crates/shared/: Cargo.toml  DESIGN.md  README.md
crates/shared/src/: config.rs  lib.rs  loader.rs  migrate.rs  migrator.rs  persist.rs  persistor.rs  profile.rs  scope.rs  store.rs  version.rs
src/: lib.rs  main.rs
src/bootstrap/: java.rs
src/meta/: loader.rs  metadata.rs  mod.rs
src/model/: argument.rs  launchenvs.rs  mod.rs  mojang.rs
src/online/: download.rs  downloader.rs  mod.rs  mojang.rs
src/storage/: game.rs  jar.rs  mod.rs  validate.rs  version.rs
