[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/demo",
    "crates/loader",
    "crates/elemental",
    "crates/object",
    "crates/shared",
]

[workspace.dependencies]
reqwest = { version = "0.12.23", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = [
    "rt",
    "macros",
    "fs",
    "rt-multi-thread",
    "process",
] }
scc = { version = "3.3.1", features = ["serde"] }
anyhow = { version = "1.0.100" }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3" }
