[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/demo",
    "crates/loader",
    "crates/elemental",
    "crates/object",
    "crates/shared",
]

[workspace.dependencies]
reqwest = { version = "0.13.1", features = ["json", "stream", "default-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = [
    "rt",
    "macros",
    "fs",
    "rt-multi-thread",
    "process",
] }
scc = { version = "3.4.8", features = ["serde"] }
anyhow = { version = "1.0.100" }
tracing = { version = "0.1.44" }
tracing-subscriber = { version = "0.3" }
async-trait = "0.1.74"
toml = "0.9.10"
dirs = { version = "6" }
