[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/demo",
    "crates/driver",
    "crates/elemental",
    "crates/object",
    "crates/schema",
    "crates/shared",
    "crates/infra",
]

[workspace.dependencies]
reqwest = { version = "0.13.1", features = ["json", "stream", "default-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.48.0", features = [
    "rt",
    "macros",
    "fs",
    "io-util",
    "rt-multi-thread",
    "process",
    "sync",
] }
scc = { version = "3.4.8", features = ["serde"] }
anyhow = { version = "1.0.100" }
async-trait = "0.1.89"
toml = "1.0.0"
dirs = { version = "6" }
futures = "0.3.32"
regex = "1.12.3"
sha1_smol = "1.0.1"
