[package]
name = "elemental-core"
version = "0.1.0"
edition = "2024"


[dependencies]
dirs = { workspace = true }
futures = "0.3.31"
md-5 = "0.10.6"
regex = "1.12.2"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
sha1_smol = "1.0.1"
uuid = "1.19.0"
zip = { version = "7.0.0", default-features = false, features = ["deflate"] }
const_format = { version = "0.2.35" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
scc = { workspace = true }
tokio-util = { version = "0.7.17", default-features = false, features = ["rt"] }
async-trait = { workspace = true }
toml = { workspace = true }
minecraft-msa-auth = "0.4.0"
oauth2 = { version = "5.0.0", default-features = false, features = [
    "reqwest",
    "rustls-tls"
] }

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"

[target.'cfg(target_os = "linux")'.dependencies]
rs-release = "0.1.11"


[features]
default = []
