[package]
name = "elemental-core"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/ElectronicWave/Elemental"
homepage = "https://github.com/ElectronicWave/Elemental"
documentation = "https://docs.rs/elemental-core"
description = "Core library for Elemental, providing common utilities and abstractions used across the project."
license = "AGPL-3.0-only"

[dependencies]
elemental-schema = { path = "../schema", version = "0.1.0" }
dirs = { workspace = true }
futures = { workspace = true }
md-5 = "0.11.0"
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
sha1_smol = { workspace = true }
uuid = "1.19.0"
const_format = { version = "0.2.35" }
tracing = "0.1.44"
tracing-subscriber = "0.3"
anyhow = { workspace = true }
scc = { workspace = true }
async-trait = { workspace = true }
toml = { workspace = true }
minecraft-msa-auth = "0.4.0"
oauth2 = { version = "5.0.0", default-features = false, features = [
    "reqwest",
    "rustls-tls",
] }

[target.'cfg(windows)'.dependencies]
winreg = "0.56.0"

[target.'cfg(target_os = "linux")'.dependencies]
rs-release = "0.1.11"


[features]
default = []
