[package]
name = "elemental-driver"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = { workspace = true }
elemental-core = { path = "../core", version = "0.1.0" }
elemental-infra = { path = "../infra", version = "0.1.0" }
elemental-schema = { path = "../schema", version = "0.1.0" }
elemental-shared = { path = "../shared", version = "0.1.0" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
quick-xml = { version = "0.39.0", features = ["serialize"] }
tokio = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
