[package]
name = "elemental-driver"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/ElectronicWave/Elemental"
homepage = "https://github.com/ElectronicWave/Elemental"
documentation = "https://docs.rs/elemental-driver"
description = "Driver library for Elemental, providing implementations for interacting with different modloaders and game versions."
license = "AGPL-3.0-only"

[dependencies]
async-trait = { workspace = true }
elemental-core = { path = "../core", version = "0.2.0" }
elemental-infra = { path = "../infra", version = "0.2.0" }
elemental-schema = { path = "../schema", version = "0.2.0" }
elemental-shared = { path = "../shared", version = "0.2.0" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
quick-xml = { version = "0.41.0", features = ["serialize"] }
tokio = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
