[package]
name = "elemental"
version = "0.1.0"
edition = "2024"

[dependencies]
elemental-core = { path = "../core", optional = true, default-features = false }
elemental-driver = { path = "../driver", optional = true, default-features = false }
elemental-launcher = { path = "../launcher", optional = true, default-features = false }
elemental-object = { path = "../object", optional = true, default-features = false }
elemental-shared = { path = "../shared", optional = true, default-features = false }
elemental-infra = { path = "../infra", optional = true, default-features = false }
elemental-schema = { path = "../schema", optional = true, default-features = false }

[features]
core = ["dep:elemental-core"]

shared = ["dep:elemental-shared"]
shared-json = ["elemental-shared/json"]
shared-toml = ["elemental-shared/toml"]

driver = ["dep:elemental-driver"]
launcher = ["dep:elemental-launcher"]

object = ["dep:elemental-object"]
object-notify = ["elemental-object/notify"]

infra = ["dep:elemental-infra"]

schema = ["dep:elemental-schema"]

full = ["driver", "launcher", "object", "shared", "core", "infra", "schema"]

default = ["full", "shared-json", "object-notify"]
