[package]
name = "elemental-kit"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/ElectronicWave/Elemental"
homepage = "https://github.com/ElectronicWave/Elemental"
documentation = "https://docs.rs/elemental-kit"
description = "Elemental is a modular, extensible Minecraft instance management and modding framework written in Rust, designed to provide a unified interface for launching, managing, and modding Minecraft across different platforms and modloader ecosystems."
license = "AGPL-3.0-only"
readme = "./../../README.md"

[dependencies]
elemental-core = { path = "../core", version = "0.2.0", optional = true, default-features = false }
elemental-driver = { path = "../driver", version = "0.2.0", optional = true, default-features = false }
elemental-launcher = { path = "../launcher", version = "0.2.0", optional = true, default-features = false }
elemental-object = { path = "../object", version = "0.2.0", optional = true, default-features = false }
elemental-shared = { path = "../shared", version = "0.2.0", optional = true, default-features = false }
elemental-infra = { path = "../infra", version = "0.2.0", optional = true, default-features = false }
elemental-schema = { path = "../schema", version = "0.2.0", optional = true, default-features = false }

[features]
core = ["dep:elemental-core"]

shared = ["dep:elemental-shared"]
shared-json = ["elemental-shared/json"]
shared-toml = ["elemental-shared/toml"]

driver = ["dep:elemental-driver"]
launcher = ["dep:elemental-launcher"]

object = ["dep:elemental-object"]
object-notify = ["elemental-object/notify"]

infra = ["dep:elemental-infra"]

schema = ["dep:elemental-schema"]

full = ["driver", "launcher", "object", "shared", "core", "infra", "schema"]

default = ["full", "shared-json", "object-notify"]
