[package]
name = "elemental-infra"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = "0.3.31"
scc = { workspace = true }
tokio-util = { version = "0.7.17", default-features = false, features = ["rt"] }
sha1_smol = "1.0.1"
zip = { version = "8.0.0", default-features = false, features = ["deflate"] }
