[package]
name = "elemental-infra"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/ElectronicWave/Elemental"
homepage = "https://github.com/ElectronicWave/Elemental"
documentation = "https://docs.rs/elemental-infra"
description = "Infrastructure library for Elemental, providing some infra objects such as downloaders, file utilities, and other common tools used across the project."
license = "AGPL-3.0-only"

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
scc = { workspace = true }
tokio-util = { version = "0.7.17", default-features = false, features = ["rt"] }
sha1_smol = { workspace = true }
zip = { version = "8.0.0", default-features = false, features = ["deflate"] }
