[package]
name = "elemental-loader"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
elemental-core = { path = "../core" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
quick-xml = { version = "0.38.1", features = ["serialize"] }
# tokio = { workspace = true }
