[package]
name = "packust"
version = "0.1.0"
edition = "2024"

[lib]

[dependencies]
log = { version = "0.4.27", features = ["kv_std"] }
md-5 = "0.10.6"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sha1_smol = "1.0.1"
toml = "0.9.7"
uuid = "1.17.0"
zip = { version = "4.2.0", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"