[package]
name = "elemental-object"
version = "0.1.0"
edition = "2024"


[dependencies]
scc = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, optional = true, features = ["sync"] }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["time"] }

[features]
notify = ["tokio"]
default = ["notify"]
