[package]
name = "elemental-object"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/ElectronicWave/Elemental"
homepage = "https://github.com/ElectronicWave/Elemental"
documentation = "https://docs.rs/elemental-object"
description = "TypeId-based object pool for hotreloadable, cross-runtime shared state management."
license = "AGPL-3.0-only"

[dependencies]
scc = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, optional = true, features = ["sync"] }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["time"] }

[features]
notify = ["tokio"]
default = ["notify"]
