[package]
name = "elemental-schema"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/ElectronicWave/Elemental"
homepage = "https://github.com/ElectronicWave/Elemental"
documentation = "https://docs.rs/elemental-schema"
description = "Mojang / Modloaders version manifest schema definitions and utilities."
license = "AGPL-3.0-only"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
