[package]
name = "elemental-shared"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
dirs = { version = "6" }
serde_json = { workspace = true, optional = true }
toml = { version = "0.9", optional = true }

[features]
json = ["dep:serde_json"]
toml = ["dep:toml"]
default = ["json"]
