[package]
name = "elemental-shared"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/ElectronicWave/Elemental"
homepage = "https://github.com/ElectronicWave/Elemental"
documentation = "https://docs.rs/elemental-shared"
description = "Lightweight, version-controlled data abstraction for persistent storage."
license = "AGPL-3.0-only"

[dependencies]
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
dirs = { workspace = true }
serde_json = { workspace = true, optional = true }
toml = { workspace = true, optional = true }

[features]
json = ["dep:serde_json"]
toml = ["dep:toml"]
default = ["json"]
